# app/Models/Car.php
@@ -6,6 +6,7 @@ use Carbon\Carbon;
 use DateTime;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use OpenApi\Annotations as OA;
 
 /**
  * Автомобили
@@ -22,8 +23,74 @@ use Illuminate\Database\Eloquent\Relations\BelongsToMany;
  * @property-read UserCar|null $users
  *
  */
+/**
+ * @OA\Schema(
+ *     title="Car",
+ *     description="Car model",
+ *     @OA\Xml(
+ *         name="Car"
+ *     )
+ * )
+ */
 class Car extends Model
 {
+    /**
+     * @OA\Property(
+     *     title="ID",
+     *     description="ID",
+     *     format="int64",
+     *     example=1
+     * )
+     *
+     * @var int
+     */
+    protected $id;
+
+    /**
+     * @OA\Property(
+     *      title="Model",
+     *      description="Модель машины",
+     *      example="Kia Rio"
+     * )
+     *
+     * @var string
+     */
+    protected $model;
+
+    /**
+     * @OA\Property(
+     *      title="Color",
+     *      description="Цвет машины",
+     *      example="белый"
+     * )
+     *
+     * @var string
+     */
+    protected $color;
+
+    /**
+     * @OA\Property(
+     *      title="Number",
+     *      description="Гос номер машины",
+     *      example="а111аа"
+     * )
+     *
+     * @var string
+     */
+    protected $number;
+
+    /**
+     * @OA\Property(property="created_at", type="datetime", example="2021-05-03T16:29:10.000000Z")
+     * @var datetime
+     */
+    protected $created_at;
+
+    /**
+     * @OA\Property(property="updated_at", type="datetime", example="2021-05-03T16:29:10.000000Z")
+     * @var datetime
+     */
+    protected $updated_at;
+
     /*
     |--------------------------------------------------------------------------
     | GLOBAL VARIABLES
